test/tests/operators/udo/args/udo-args-set-constant-target.txt
error: expected selector
 --> tests/operators/udo/args/udo-args-set-constant-target.tql:6:29
  |
6 | argspkg::set_untyped_target "not-a-field", "test"
  |                             ^^^^^^^^^^^^^ 
  |
